--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "Jingcheng Chen",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
+    "firebase": "^5.3.0",
     "forge-apis": "^0.4.1",
     "multer": "^1.3.1",
-    "cookie-session": "^2.0.0-beta.3",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4"
+    "vue": "^2.5.16",
+    "vuefire": "^1.4.5"
   }
 }
