--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.16.3",
     "firebase": "^5.3.0",
     "forge-apis": "^0.4.1",
+    "javascript-time-ago": "^1.0.31",
     "multer": "^1.3.1",
+    "timeago.js": "^3.0.2",
     "vue": "^2.5.16",
     "vuefire": "^1.4.5"
   }
